<resources>
    <string name="app_name">Where Am I?</string>
    <string name="questionnaire_question_yes_answer">Yes</string>
    <string name="questionnaire_question_no_answer">No</string>
    <string name="start_questionnaire_button_text">Start Questionnaire</string>
    <string name="private_campaign_id">Campaign Identifier</string>
    <string name="private_campaign_join">Join</string>
    <string name="loading_campaigns_message">Please wait - Loading Campaigns</string>
    <string name="confirm_save_selection">Do you wish to join this campaign? This will cause you to unsubscribe from the campaign that you are currently contributing to.</string>
    <string name="confirm_leave">Do you wish to unsubscribe from the campaign that you are currently contributing to?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="select_campaign_first_message">You must select a campaign before pressing submit.</string>
    <string name="unsubscribe_from_campaign_message">Are you certain that you wish to unsubscribe from your current campaign</string>
    <string name="unable_to_connect">Unable to connect to server</string>
    <string name="no_campaigns_available">No campaigns available</string>
    <string name="confirm">Confirm</string>
    <string name="unexpected_response_from_server">Unexpected response from server</string>
    <string name="private_campaign_button">Private campaign</string>
    <string name="public_campaign_button">Public campaigns</string>
    <string name="campaign_specification_fragment_title">Campaign Title</string>
    <string name="campaign_specification_name_title">Name:</string>
    <string name="continue_message">Continue</string>
    <string name="campaign_joined_message">Successfully subscribed to campaign</string>
    <string name="campaign_left_message">Successfully unsubscribed from campaign</string>
    <string name="unable_to_join_campaign_message">Unable to join campaign</string>
    <string name="private_campaign_invalid_campaign_id_message">Please enter a valid campaign ID</string>
    <string name="unable_to_locate_campaign_message">Unable to locate a campaign with the specified ID</string>
    <string name="generic_something_went_wrong_message">Something went wrong, try again</string>
    <string name="open">open</string>
    <string name="close">Close</string>
    <string name="CURRENTLY_CHECKED_CAMPAIGN_ID_KEY">CURRENTLY_CHECKED_CAMPAIGN_ID_KEY</string>
    <string name="welcome_message">Start contributing today</string>
    <string name="browse_campaigns">BROWSE CAMPAIGNS</string>
    <string name="CAMPAIGN_CONFIRMATION_FRAGMENT_KEY">CAMPAIGN_CONFIRMATION_FRAGMENT_KEY</string>
    <string name="questionnaire_expired_message">Questionnaire Expired</string>
    <string name="looking_for_campaign">Are you looking for a specific campaign?</string>
    <string name="click_to_search">Click here to search for one</string>
</resources>
