<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <LinearLayout
        android:id="@+id/confirm_button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp">

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm"/>
    </LinearLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/confirm_button_container"
        android:layout_alignParentTop="true">

        <ListView
            android:id="@+id/campaigns_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </android.support.v4.widget.SwipeRefreshLayout>

    <TextView
        android:id="@+id/empty_no_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/no_campaigns_available"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/empty_unexpected_response"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/unexpected_response_from_server"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/empty_no_connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/unable_to_connect"
        android:visibility="gone"/>

</RelativeLayout>