<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="@dimen/abc_action_bar_icon_vertical_padding_material">

    <View
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="@dimen/abc_text_size_display_1_material"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcome_message"
            android:textSize="@dimen/abc_text_size_body_1_material"/>

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/browse_campaign_button"
        android:layout_width="wrap_content"
        android:padding="18dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/light_blue"
        android:elevation="8dp"
        android:text="@string/browse_campaigns"
        android:textColor="@color/white"/>

</LinearLayout>